# jons-mcp-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: CLAUDE.md  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/: __init__.py  constants.py  exceptions.py  server.py  utils.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.pkg_name}}/tools/: __init__.py  example.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_example.py
